--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,47 @@
+# Build files
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
-### Eclipse ###
+# IntelliJ IDEA
+.idea/
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/usage.statistics.xml
+.idea/**/tasks.xml
+.idea/**/shelf/
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
+# Cursive Clojure plugin
+.idea/replstate.xml
+# Editor-based Rest Client
+.idea/httpRequests/
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
+*.iws
+*.iml
+*.ipr
+
+# Eclipse
 .apt_generated
 .classpath
 .factorypath
@@ -24,24 +49,23 @@ out/
 .settings
 .springBeans
 .sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 
-### VS Code ###
+# VS Code
 .vscode/
 *.class
 *.bak
 
+# Operating system
 ### Mac OS ###
 .DS_Store
 
+# Other
 # Astah
 *.asta.lock
